{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 175,
  "lineage": "a67f9e4d-1e16-801b-1064-2ad01c3dc779",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:069062668071:loadbalancer/app/apache-alb/2606dcfb3c5ea303",
            "arn_suffix": "app/apache-alb/2606dcfb3c5ea303",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "apache-alb-1671158163.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:069062668071:loadbalancer/app/apache-alb/2606dcfb3c5ea303",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "apache-alb",
            "preserve_host_header": false,
            "region": "eu-west-1",
            "security_groups": [
              "sg-03a1624c1a6494f3b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0142570dd0c8296f4"
              },
              {
                "subnet_id": "subnet-050c5e379d44851fa"
              },
              {
                "subnet_id": "subnet-0806222f3307eaf49"
              }
            ],
            "subnets": [
              "subnet-0142570dd0c8296f4",
              "subnet-050c5e379d44851fa",
              "subnet-0806222f3307eaf49"
            ],
            "vpc_id": "vpc-07c2bbd17a384d665",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:069062668071:loadbalancer/app/apache-alb/2606dcfb3c5ea303"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_subnet.public_subnet_3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:069062668071:listener/app/apache-alb/2606dcfb3c5ea303/fcc6438cb2fd1398",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:069062668071:targetgroup/apache-tg/f63b125ee78e912f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:069062668071:listener/app/apache-alb/2606dcfb3c5ea303/fcc6438cb2fd1398",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:069062668071:loadbalancer/app/apache-alb/2606dcfb3c5ea303",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-west-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:069062668071:listener/app/apache-alb/2606dcfb3c5ea303/fcc6438cb2fd1398"
          },
          "dependencies": [
            "aws_alb.alb",
            "aws_alb_target_group.tg",
            "aws_security_group.alb-sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_subnet.public_subnet_3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:069062668071:targetgroup/apache-tg/f63b125ee78e912f",
            "arn_suffix": "targetgroup/apache-tg/f63b125ee78e912f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:069062668071:targetgroup/apache-tg/f63b125ee78e912f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-1:069062668071:loadbalancer/app/apache-alb/2606dcfb3c5ea303"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "apache-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-west-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07c2bbd17a384d665"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:069062668071:targetgroup/apache-tg/f63b125ee78e912f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0336eba24c1289740",
            "arn": "arn:aws:ec2:eu-west-1:069062668071:elastic-ip/eipalloc-0336eba24c1289740",
            "association_id": "eipassoc-06136085d1f4e87b5",
            "domain": "vpc",
            "id": "eipalloc-0336eba24c1289740",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0b5f38819e0b6cfd0",
            "private_dns": "ip-10-0-4-8.eu-west-1.compute.internal",
            "private_ip": "10.0.4.8",
            "public_dns": "ec2-99-81-159-236.eu-west-1.compute.amazonaws.com",
            "public_ip": "99.81.159.236",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-1",
            "tags": {
              "Name": "apache-NAT-EIP"
            },
            "tags_all": {
              "Name": "apache-NAT-EIP"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:069062668071:internet-gateway/igw-02c088bf27013ef51",
            "id": "igw-02c088bf27013ef51",
            "owner_id": "069062668071",
            "region": "eu-west-1",
            "tags": {
              "Name": "apache-igw"
            },
            "tags_all": {
              "Name": "apache-igw"
            },
            "vpc_id": "vpc-07c2bbd17a384d665"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0336eba24c1289740",
            "association_id": "eipassoc-06136085d1f4e87b5",
            "connectivity_type": "public",
            "id": "nat-07ebbb0803ccea48b",
            "network_interface_id": "eni-0b5f38819e0b6cfd0",
            "private_ip": "10.0.4.8",
            "public_ip": "99.81.159.236",
            "region": "eu-west-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0806222f3307eaf49",
            "tags": {
              "Name": "apache-NAT-gateway"
            },
            "tags_all": {
              "Name": "apache-NAT-gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.NAT",
            "aws_internet_gateway.gw",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:069062668071:route-table/rtb-0b0e6851189477c8c",
            "id": "rtb-0b0e6851189477c8c",
            "owner_id": "069062668071",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02c088bf27013ef51",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "apache-public-rt"
            },
            "tags_all": {
              "Name": "apache-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c2bbd17a384d665"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "069062668071",
            "id": "rtb-0b0e6851189477c8c",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:069062668071:route-table/rtb-0e1731a2cc9202bed",
            "id": "rtb-0e1731a2cc9202bed",
            "owner_id": "069062668071",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07ebbb0803ccea48b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "apache-private-subnet-1"
            },
            "tags_all": {
              "Name": "apache-private-subnet-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c2bbd17a384d665"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "069062668071",
            "id": "rtb-0e1731a2cc9202bed",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_eip.NAT",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.main",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:069062668071:route-table/rtb-02fd743154aeccb4d",
            "id": "rtb-02fd743154aeccb4d",
            "owner_id": "069062668071",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07ebbb0803ccea48b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "apache-private-subnet-2"
            },
            "tags_all": {
              "Name": "apache-private-subnet-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c2bbd17a384d665"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "069062668071",
            "id": "rtb-02fd743154aeccb4d",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_eip.NAT",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.main",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:069062668071:route-table/rtb-0ad37e7000e5617b5",
            "id": "rtb-0ad37e7000e5617b5",
            "owner_id": "069062668071",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07ebbb0803ccea48b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "apache-private-subnet-3"
            },
            "tags_all": {
              "Name": "apache-private-subnet-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c2bbd17a384d665"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "069062668071",
            "id": "rtb-0ad37e7000e5617b5",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_eip.NAT",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.main",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034f5f83b4354709e",
            "region": "eu-west-1",
            "route_table_id": "rtb-0e1731a2cc9202bed",
            "subnet_id": "subnet-0e3fb9cfbe6fea82d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.NAT",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.main",
            "aws_route_table.private_subnet_1",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac284e339f68d236",
            "region": "eu-west-1",
            "route_table_id": "rtb-02fd743154aeccb4d",
            "subnet_id": "subnet-042d19dfa7ad9eeda"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.NAT",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.main",
            "aws_route_table.private_subnet_2",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0846f80b968056f68",
            "region": "eu-west-1",
            "route_table_id": "rtb-0ad37e7000e5617b5",
            "subnet_id": "subnet-082aac3da75fddb14"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.NAT",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.main",
            "aws_route_table.private_subnet_3",
            "aws_subnet.private_subnet_3",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07abe2222d074de5f",
            "region": "eu-west-1",
            "route_table_id": "rtb-0b0e6851189477c8c",
            "subnet_id": "subnet-0806222f3307eaf49"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.main",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0949f1561b7368508",
            "region": "eu-west-1",
            "route_table_id": "rtb-0b0e6851189477c8c",
            "subnet_id": "subnet-0142570dd0c8296f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.main",
            "aws_subnet.public_subnet_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091682311da337739",
            "region": "eu-west-1",
            "route_table_id": "rtb-0b0e6851189477c8c",
            "subnet_id": "subnet-050c5e379d44851fa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.main",
            "aws_subnet.public_subnet_3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:069062668071:security-group/sg-03a1624c1a6494f3b",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03a1624c1a6494f3b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb_security_group",
            "name_prefix": "",
            "owner_id": "069062668071",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb_security_group"
            },
            "tags_all": {
              "Name": "alb_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c2bbd17a384d665"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "069062668071",
            "id": "sg-03a1624c1a6494f3b",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:069062668071:security-group/sg-03e2927c8b51f9df6",
            "description": "apache-ec2-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e2927c8b51f9df6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03a1624c1a6494f3b"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "apache-ec2-sg",
            "name_prefix": "",
            "owner_id": "069062668071",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2_security_group"
            },
            "tags_all": {
              "Name": "ec2_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c2bbd17a384d665"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "069062668071",
            "id": "sg-03e2927c8b51f9df6",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:069062668071:subnet/subnet-0e3fb9cfbe6fea82d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3fb9cfbe6fea82d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "069062668071",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "apache-private-subnet-1"
            },
            "tags_all": {
              "Name": "apache-private-subnet-1"
            },
            "vpc_id": "vpc-07c2bbd17a384d665"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "069062668071",
            "id": "subnet-0e3fb9cfbe6fea82d",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:069062668071:subnet/subnet-042d19dfa7ad9eeda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042d19dfa7ad9eeda",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "069062668071",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "apache-private-subnet-2"
            },
            "tags_all": {
              "Name": "apache-private-subnet-2"
            },
            "vpc_id": "vpc-07c2bbd17a384d665"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "069062668071",
            "id": "subnet-042d19dfa7ad9eeda",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:069062668071:subnet/subnet-082aac3da75fddb14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.160.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082aac3da75fddb14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "069062668071",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "apache-private-subnet-3"
            },
            "tags_all": {
              "Name": "apache-private-subnet-3"
            },
            "vpc_id": "vpc-07c2bbd17a384d665"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "069062668071",
            "id": "subnet-082aac3da75fddb14",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:069062668071:subnet/subnet-0806222f3307eaf49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0806222f3307eaf49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "069062668071",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "apache-public-subnet-1"
            },
            "tags_all": {
              "Name": "apache-public-subnet-1"
            },
            "vpc_id": "vpc-07c2bbd17a384d665"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "069062668071",
            "id": "subnet-0806222f3307eaf49",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:069062668071:subnet/subnet-0142570dd0c8296f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0142570dd0c8296f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "069062668071",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "apache-public-subnet-2"
            },
            "tags_all": {
              "Name": "apache-public-subnet-2"
            },
            "vpc_id": "vpc-07c2bbd17a384d665"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "069062668071",
            "id": "subnet-0142570dd0c8296f4",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:069062668071:subnet/subnet-050c5e379d44851fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-050c5e379d44851fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "069062668071",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "apache-public-subnet-3"
            },
            "tags_all": {
              "Name": "apache-public-subnet-3"
            },
            "vpc_id": "vpc-07c2bbd17a384d665"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "069062668071",
            "id": "subnet-050c5e379d44851fa",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:069062668071:vpc/vpc-07c2bbd17a384d665",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02920d31a13c95b2a",
            "default_route_table_id": "rtb-0ef691c7ce14e6fcc",
            "default_security_group_id": "sg-0538225fae22703c1",
            "dhcp_options_id": "dopt-0bde405506d1b052d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07c2bbd17a384d665",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ef691c7ce14e6fcc",
            "owner_id": "069062668071",
            "region": "eu-west-1",
            "tags": {
              "Name": "apache-vpc"
            },
            "tags_all": {
              "Name": "apache-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}